# lab_os5

./: .gitignore  CMakeLists.txt  LibSort.cpp  LibTrans.cpp  library.h  main.cpp  main_dynamic.cpp  operation.cpp  report.docx  translation.cpp
